Viewport height fixed on mobile

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -73,7 +73,7 @@ nav > ul{
     }
     ul > li{
         width: 100%;
-        border-top: 1px solid gray;
+        border-top: 0.5px solid gray;
     }
     .header-link{
         display: flex;
