--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ html, body{
   font-family: "Inter", sans-serif;
   background-color: #F3F2F1;
   line-height: 1.5;
+  height: 100%;
 }
 
 h1, h2, h3, h4, p{
@@ -17,10 +18,11 @@ h1, h2, h3, h4, p{
   display: flex;
   flex-direction: column;
   overflow: auto;
+  height: 100%;
 }
 
 main{
-  height: 93vh;
+  height: 100%;
   min-width: 300px;
   display: flex;
   flex-direction: column;
@@ -32,7 +34,7 @@ main{
 
 @media (max-width:500px) {
   main{
-    padding-bottom: 20%;
+    padding-bottom: 10%;
   }
 }
 
